--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo"><i class="fas fa-shopping-basket"></i> groco</a>
+        <a href="#" class="logo"><i class="fas fa-shopping-basket"></i> Diva</a>
         <nav class="navbar">
             <a href="#home">home</a>
             <a href="#features">features</a>
@@ -18,6 +18,60 @@
             <a href="#review">review</a>
             <a href="#blogs">blogs</a>
         </nav>
+        <div class="icons">
+            <!-- btn-toogle pour la responsive -->
+            <div class="fas fa-bars" id="menu-btn"></div> 
+            <!-- btn-toogle pour la responsive -->
+            <div class="fas fa-search" id="search-btn"></div>
+            <div class="fas fa-shopping-cart" id="cart-btn"></div>
+            <div class="fas fa-user" id="login-btn"></div>
+
+        </div>
+        <form action="" class="search-form">
+          <input type="search" id="search-box"class="box" placeholder="Tape ici..">  
+          <label for="search-box" class="fa fa-search"></label>
+        </form>
+
+        <div class="shopping-cart">
+            <div class="box">
+                <i class="fas fa-trash"></i>
+                <img src="image/cart-img-1.png" alt="">
+                <div class="content">
+                    <h3>watermelon</h3>
+                    <span class="price">$4.99/-</span>
+                    <span class="quantity">qty:1</span>
+                </div>
+            </div>
+            <div class="box">
+                <i class="fas fa-trash"></i>
+                <img src="image/cart-img-2.png" alt="">
+                <div class="content">
+                    <h3>onion</h3>
+                    <span class="price">$4.99/-</span>
+                    <span class="quantitu">qty:1</span>
+                </div>
+            </div>
+            <div class="box">
+                <i class="fas fa-trash"></i>
+                <img src="image/cart-img-3.png" alt="">
+                <div class="content">
+                    <h3>chicken</h3>
+                    <span class="price">$4.99/-</span>
+                    <span class="quantitu">qty:1</span>
+                </div>
+            </div>
+            <div class="total"> total:$19.69/-</div>
+            <a href="#" class="btn">checkout</a>
+        </div>
+         
+        <form action="#" class="login-form">
+            <h3>login now</h3>
+            <input type="email" placeholder="enter your mail here.." class="box">
+            <input type="password" placeholder="password here.." class="box">
+            <p>mot de pass oublié <a href="#"> clique ici</a></p>
+            <p>pas de compte <a href="#"> creér maintenant</a></p>
+            <input type="submit" value="login now" class="btn">
+        </form>
     </header>
     
 
