features session finished

--- a/index.html
+++ b/index.html
@@ -85,6 +85,35 @@
      </section>
       
      <!-- home secction ends -->
+     <!-- feature section starts -->
+     <section class="features" id="features">
+         <h1 class="heading"> Our <span> features</span></h1>
+         <div class="box-container">
+             <div class="box">
+                 <img src="image/feature-img-1.png" alt="">
+                 <h3>free and organic</h3>
+                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non, harum!</p>
+                 <a href="#" class="btn">read more</a>
+             </div>
+         
+             <div class="box">
+                 <img src="image/feature-img-2.png" alt="">
+                 <h3>free delivrery</h3>
+                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non, harum!</p>
+                 <a href="#" class="btn">read more</a>
+            </div>
+            <div class="box">
+                <img src="image/feature-img-3.png" alt="">
+                <h3>easy payments</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non, harum!</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+         </div>
+
+     </section>
+
+
+     <!-- feature section ends -->
 
     <script src="/js/script.js"></script>
 </body>
