--- a/index.html
+++ b/index.html
@@ -268,6 +268,65 @@
      </section>
       <!-- categories section ends -->
 
+       <!-- review section starts -->
+       <section class="review" id="review">
+           <h1 class="heading"> customer's <span>review</span></h1>
+           <div class="swiper review-slider">
+               <div class="swiper-wrapper">
+                   <div class="swiper-slide box">
+                       <img src="image/pic-1.png" alt="">
+                       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea itaque alias cupiditate iure amet illum!</p>
+                       <h3>john deo</h3>
+                       <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                       </div>
+                   </div>
+                   <div class="swiper-slide box">
+                    <img src="image/pic-2.png" alt="">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea itaque alias cupiditate iure amet illum!</p>
+                    <h3>shela mavuba</h3>
+                    <div class="stars">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star-half-alt"></i>
+                    </div>
+                </div>
+                <div class="swiper-slide box">
+                    <img src="image/pic-3.png" alt="">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea itaque alias cupiditate iure amet illum!</p>
+                    <h3>john deo</h3>
+                    <div class="stars">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star-half-alt"></i>
+                    </div>
+                </div>
+                <div class="swiper-slide box">
+                    <img src="image/pic-4.png" alt="">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea itaque alias cupiditate iure amet illum!</p>
+                    <h3>marcia kandolo</h3>
+                    <div class="stars">
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star"></i>
+                     <i class="fas fa-star-half-alt"></i>
+                    </div>
+                </div>
+               </div>
+           </div>
+       </section>
+
+        <!-- review section ends -->
+
 
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="/js/script.js"></script>
