--- a/index.html
+++ b/index.html
@@ -324,8 +324,52 @@
                </div>
            </div>
        </section>
-
         <!-- review section ends -->
+
+         <!-- blog section starts -->
+         <section class="blogs" id="blogs">
+             <h1 class="heading"> our <span>blogs</span></h1>
+             <div class="box-container">
+                 <div class="box">
+                     <img src="image/blog-1.jpg" alt="">
+                     <div class="content">
+                         <div class="icons">
+                             <a href=""> <i class="fas fa-user"></i> by user </a>
+                             <a href=""> <i class="fas fa-calendar"></i> 1s june,2022 </a>
+                         </div>
+                         <h3>fresh and organic vegitables and fruites</h3>
+                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit</p>
+                         <a href=""class="btn">read more</a>
+                     </div>
+                 </div>
+                 <div class="box">
+                    <img src="image/blog-2.jpg" alt="">
+                    <div class="content">
+                        <div class="icons">
+                            <a href=""> <i class="fas fa-user"></i> by user </a>
+                            <a href=""> <i class="fas fa-calendar"></i> 1s june,2022 </a>
+                        </div>
+                        <h3>fresh and organic vegitables and fruites</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit</p>
+                        <a href=""class="btn">read more</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="image/blog-3.jpg" alt="">
+                    <div class="content">
+                        <div class="icons">
+                            <a href=""> <i class="fas fa-user"></i> by user </a>
+                            <a href=""> <i class="fas fa-calendar"></i> 1s june,2022 </a>
+                        </div>
+                        <h3>fresh and organic vegitables and fruites</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit</p>
+                        <a href=""class="btn">read more</a>
+                    </div>
+                </div>
+             </div>
+         </section>
+
+          <!-- blog section ends -->
 
 
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
