--- a/index.html
+++ b/index.html
@@ -370,6 +370,48 @@
          </section>
 
           <!-- blog section ends -->
+          <!-- footer section starts -->
+          <section class="footer">
+              <div class="box-container">
+                  <div class="box">
+                      <h3> DivaMarket <i class="fas fa-shopping-basket"></i></h3>
+                      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit</p>
+                      <div class="share">
+                          <a href="" class="fab fa-facebook-f"></a>
+                          <a href="" class="fab fa-twitter"></a>
+                          <a href="" class="fab fa-instagram"></a>
+                          <a href="" class="fab fa-linkedin"></a>
+                          <a href="" class="fab fa-facebook-f"></a>
+                      </div>
+                  </div>
+                  <div class="box">
+                      <h3> contact info </h3>
+                      <a href="" class="links"> <i class="fas fa-phone"></i> +243-82-994-6171</a>
+                      <a href="" class="links"> <i class="fas fa-phone"></i> +111-222-333</a>
+                      <a href="" class="links"> <i class="fas fa-envelope"></i> mavuba@gmail.com</a>
+                      <a href="" class="links"> <i class="fas fa-map-marker-alt"></i> yongo,36,n'djili</a>
+                  </div>
+                  <div class="box">
+                      <h3> quick link </h3>
+                      <a href="" class="links"> <i class="fas fa-arrow-right"></i> home </a>
+                      <a href="" class="links"> <i class="fas fa-arrow-right"> </i> features </a>
+                      <a href="" class="links"> <i class="fas fa-arrow-right"> </i> products</a>
+                      <a href="" class="links"> <i class="fas fa-arrow-right">  </i>categories</a>
+                      <a href="" class="links"> <i class="fas fa-arrow-right"> </i>review</a>
+                      <a href="" class="links"> <i class="fas fa-arrow-right"></i> blogs</a>
+                  </div>
+                  <div class="box">
+                    <h3> newsletter</h3>
+                    <p>subscribe for latest updates</p>
+                    <input type="email" placeholder="your email" class="email">
+                    <input type="submit" value="subscribe" class="btn">
+                    <img src="image/payment.png" class="payment-img" alt="">
+                </div>
+              </div>
+              <div class="credit"> created by <span> mr. pathy webmaster </span> |All rights reserved </div>
+          </section>
+
+          <!-- footer section ends -->
 
 
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
